--- a/一些问题.md
+++ b/一些问题.md
@@ -10,12 +10,16 @@ sudo nano /root/.bashrc
 source /home/<your_username>/.bashrc
 ```
 
-## rosip自动切换
+## ros master uri自动切换
 
 ```sh
-export ROS_IP=$(ip -4 addr show scope global | grep -oP '(?<=inet\s)\d+(\.\d+){3}' | head -n 1)
-if [ -z "$ROS_IP" ]; then
-    export ROS_IP="127.0.0.1"
+detected_ip=$(ip -4 addr show scope global | grep -oP '(?<=inet\s)\d+(\.\d+){3}' | head -n 1)
+if [ "$detected_ip" == "192.168.100.1" ]; then
+    export ROS_IP="${detected_ip:-127.0.0.1}"
+    export ROS_MASTER_URI=http://192.168.100.2:11311
+else
+    export ROS_IP="${detected_ip:-127.0.0.1}"
+    export ROS_MASTER_URI=http://${ROS_IP}:11311
 fi
 ```
 
