--- a/代码随想录/docs/数组.md
+++ b/代码随想录/docs/数组.md
@@ -32,7 +32,9 @@ array: 必须指定大小，且大小在编译时确定。
 
 ------
 
+# CPP VECTOR 容器
 
+详见[网址](https://www.runoob.com/cplusplus/cpp-vector.html)
 
 # 二分查找
 
@@ -79,3 +81,15 @@ int middle = left + ((right - left) / 2);
 
 ------
 
+# 双指针法
+
+**通过一个快指针和慢指针在一个for循环下完成两个for循环的工作。**
+
+定义快慢指针
+
+- 快指针：寻找新数组的元素 ，新数组就是不含有目标元素的数组
+- 慢指针：指向更新 新数组下标的位置
+
+数组平方的最大值就在数组的两端，不是最左边就是最右边，不可能是中间。
+
+此时可以考虑双指针法了，i指向起始位置，j指向终止位置。
