--- a/代码随想录/docs/数组.md
+++ b/代码随想录/docs/数组.md
@@ -36,6 +36,12 @@ array: 必须指定大小，且大小在编译时确定。
 
 详见[网址](https://www.runoob.com/cplusplus/cpp-vector.html)
 
+vector创建二维数组
+
+```cpp
+  vector<vector<int>> res(n, vector<int>(n, 0)); // 使用vector定义一个二维数组
+```
+
 # 二分查找
 
 **题目的前提是数组为有序数组**，同时题目还强调**数组中无重复元素**，因为一旦有重复元素，使用二分查找法返回的元素下标可能不是唯一的，这些都是使用二分法的前提条件，当大家看到题目描述满足如上条件的时候，可要想一想是不是可以用二分法了。
@@ -83,7 +89,7 @@ int middle = left + ((right - left) / 2);
 
 # 双指针法
 
-**通过一个快指针和慢指针在一个for循环下完成两个for循环的工作。**
+**通过一个快指针和慢指针在一个for循环下完成两个for循环的工作。**正确的二分法一定要坚持**循环不变量原则**
 
 定义快慢指针
 
@@ -93,3 +99,9 @@ int middle = left + ((right - left) / 2);
 数组平方的最大值就在数组的两端，不是最左边就是最右边，不可能是中间。
 
 此时可以考虑双指针法了，i指向起始位置，j指向终止位置。
+
+### 滑动窗口
+
+接下来就开始介绍数组操作中另一个重要的方法：**滑动窗口**。
+
+所谓滑动窗口，**就是不断的调节子序列的起始位置和终止位置，从而得出我们要想的结果**。
