--- a/代码随想录/docs/数组.md
+++ b/代码随想录/docs/数组.md
@@ -69,7 +69,7 @@ vector创建二维数组
 
 ## 防止溢出
 
-```
+```cpp
 int middle = left + ((right - left) / 2);
 ```
 
@@ -105,3 +105,49 @@ int middle = left + ((right - left) / 2);
 接下来就开始介绍数组操作中另一个重要的方法：**滑动窗口**。
 
 所谓滑动窗口，**就是不断的调节子序列的起始位置和终止位置，从而得出我们要想的结果**。
+
+# 循环输入的方法
+
+```cpp
+while(cin>>a>>b){}
+```
+
+# 前缀和
+
+前缀和的思想是重复利用计算过的子数组之和，从而降低区间查询需要累加计算的次数。
+
+**前缀和 在涉及计算区间和的问题时非常有用**
+
+例如，我们要统计 vec[i] 这个数组上的区间和。
+
+我们先做累加，即 p[i] 表示 下标 0 到 i 的 vec[i] 累加 之和。
+
+如图：
+
+![](https://code-thinking-1253855093.file.myqcloud.com/pics/20240627110604.png)
+
+如果，我们想统计，在vec数组上 下标 2 到下标 5 之间的累加和，那是不是就用 p[5] - p[1] 就可以了。
+
+为什么呢？
+
+`p[1] = vec[0] + vec[1];`
+
+`p[5] = vec[0] + vec[1] + vec[2] + vec[3] + vec[4] + vec[5];`
+
+`p[5] - p[1] = vec[2] + vec[3] + vec[4] + vec[5];`
+
+这不就是我们要求的 下标 2 到下标 5 之间的累加和吗。
+
+如图所示：
+
+![](https://code-thinking-1253855093.file.myqcloud.com/pics/20240627111319.png)
+
+`p[5] - p[1]` 就是 红色部分的区间和。
+
+而 p 数组是我们之前就计算好的累加和，所以后面每次求区间和的之后 我们只需要 O(1) 的操作。
+
+**特别注意**： 在使用前缀和求解的时候，要特别注意 求解区间。
+
+如上图，如果我们要求 区间下标 [2, 5] 的区间和，那么应该是 p[5] - p[1]，而不是 p[5] - p[2]
+
+### C++ 代码 面对大量数据 读取 输出操作，最好用scanf 和 printf，耗时会小很多
