--- a/代码随想录/docs/链表.md
+++ b/代码随想录/docs/链表.md
@@ -30,8 +30,6 @@ struct ListNode {
 ListNode* head = new ListNode(5);
 ```
 
-
-
 # 虚拟头节点
 
 **可以设置一个虚拟头结点**，这样原链表的所有节点就都可以按照统一的方式进行移除了。
@@ -45,3 +43,5 @@ ListNode* head = new ListNode(5);
 - **简化边界处理**：在链表操作中，处理头节点时通常需要特殊判断。使用虚拟头节点后，头节点和其他节点的处理方式可以统一。
 - **避免空指针异常**：当链表为空时，直接操作头节点可能导致空指针异常。虚拟头节点可以确保链表始终有一个节点，减少异常情况。
 - **方便删除操作**：在删除链表节点时，如果需要删除头节点，虚拟头节点可以避免额外的判断。
+
+# 指针和数组
