--- a/代码随想录/docs/哈希.md
+++ b/代码随想录/docs/哈希.md
@@ -17,19 +17,228 @@
 在C++中，set 和 map 分别提供以下三种数据结构，其底层实现以及优劣如下表所示：
 
 | 集合                 | 底层实现 | 是否有序 | 数值是否可以重复 | 能否更改数值 | 查询效率     | 增删效率     |
-| ------------------ | ---- | ---- | -------- | ------ | -------- | -------- |
+|--------------------|------|------|----------|--------|----------|----------|
 | std::set           | 红黑树  | 有序   | 否        | 否      | O(log n) | O(log n) |
 | std::multiset      | 红黑树  | 有序   | 是        | 否      | O(logn)  | O(logn)  |
 | std::unordered_set | 哈希表  | 无序   | 否        | 否      | O(1)     | O(1)     |
 
-std::unordered_set底层实现为哈希表，std::set 和std::multiset 的底层实现是红黑树，红黑树是一种平衡二叉搜索树，所以key值是有序的，但key不可以修改，改动key值会导致整棵树的错乱，所以只能删除和增加。
+std::unordered_set底层实现为哈希表，std::set 和std::multiset
+的底层实现是红黑树，红黑树是一种平衡二叉搜索树，所以key值是有序的，但key不可以修改，改动key值会导致整棵树的错乱，所以只能删除和增加。
 
 | 映射                 | 底层实现 | 是否有序  | 数值是否可以重复 | 能否更改数值  | 查询效率     | 增删效率     |
-| ------------------ | ---- | ----- | -------- | ------- | -------- | -------- |
+|--------------------|------|-------|----------|---------|----------|----------|
 | std::map           | 红黑树  | key有序 | key不可重复  | key不可修改 | O(logn)  | O(logn)  |
 | std::multimap      | 红黑树  | key有序 | key可重复   | key不可修改 | O(log n) | O(log n) |
 | std::unordered_map | 哈希表  | key无序 | key不可重复  | key不可修改 | O(1)     | O(1)     |
 
-std::unordered_map 底层实现为哈希表，std::map 和std::multimap 的底层实现是红黑树。同理，std::map 和std::multimap 的key也是有序的（这个问题也经常作为面试题，考察对语言容器底层的理解）。
+std::unordered_map 底层实现为哈希表，std::map 和std::multimap 的底层实现是红黑树。同理，std::map 和std::multimap
+的key也是有序的（这个问题也经常作为面试题，考察对语言容器底层的理解）。
 
 当我们要使用集合来解决哈希问题的时候，优先使用unordered_set，因为它的查询和增删效率是最优的，如果需要集合是有序的，那么就用set，如果要求不仅有序还要有重复数据的话，那么就用multiset。
+`std::set` 是 C++ 标准库中的一种关联容器，用于存储**唯一**的元素，并且元素会按照特定的排序规则自动排序。它基于红黑树（一种平衡二叉搜索树）实现，因此插入、删除和查找操作的时间复杂度都是
+**O(log n)**。
+
+# `std::set` 的常见操作及其用法：
+
+---
+
+### 1. **初始化 `std::set`**
+
+```cpp
+#include <iostream>
+#include <set>
+
+int main() {
+    // 默认初始化（升序）
+    std::set<int> s1 = {3, 1, 4, 1, 5}; // 重复元素会被忽略
+    // s1 = {1, 3, 4, 5}
+
+    // 自定义排序规则（降序）
+    std::set<int, std::greater<int>> s2 = {3, 1, 4, 1, 5};
+    // s2 = {5, 4, 3, 1}
+
+    return 0;
+}
+```
+
+---
+
+### 2. **插入元素**
+
+- 使用 `insert()` 方法插入元素。
+- 如果元素已存在，则不会重复插入。
+
+```cpp
+std::set<int> s = {1, 2, 3};
+s.insert(4); // s = {1, 2, 3, 4}
+s.insert(2); // 2 已存在，不会重复插入
+```
+
+---
+
+### 3. **删除元素**
+
+- 使用 `erase()` 方法删除元素。
+- 可以删除指定值或指定位置的元素。
+
+```cpp
+std::set<int> s = {1, 2, 3, 4, 5};
+
+// 删除值为 3 的元素
+s.erase(3); // s = {1, 2, 4, 5}
+
+// 删除迭代器指向的元素
+auto it = s.find(2);
+if (it != s.end()) {
+    s.erase(it); // s = {1, 4, 5}
+}
+```
+
+---
+
+### 4. **查找元素**
+
+- 使用 `find()` 方法查找元素。
+- 如果找到，返回指向该元素的迭代器；否则返回 `end()`。
+
+```cpp
+std::set<int> s = {1, 2, 3, 4, 5};
+
+auto it = s.find(3);
+if (it != s.end()) {
+    std::cout << "Found: " << *it << std::endl; // 输出: Found: 3
+} else {
+    std::cout << "Not found" << std::endl;
+}
+```
+
+---
+
+### 5. **判断元素是否存在**
+
+- 使用 `count()` 方法判断元素是否存在。
+- 由于 `std::set` 中的元素是唯一的，`count()` 返回值只能是 0 或 1。
+
+```cpp
+std::set<int> s = {1, 2, 3, 4, 5};
+
+if (s.count(3)) {
+    std::cout << "3 exists in the set" << std::endl;
+} else {
+    std::cout << "3 does not exist in the set" << std::endl;
+}
+```
+
+---
+
+### 6. **遍历 `std::set`**
+
+- 使用迭代器遍历 `std::set`。
+- 遍历时元素会按照排序规则输出。
+
+```cpp
+std::set<int> s = {3, 1, 4, 1, 5};
+
+for (auto it = s.begin(); it != s.end(); ++it) {
+    std::cout << *it << " "; // 输出: 1 3 4 5
+}
+```
+
+---
+
+### 7. **获取集合大小**
+
+- 使用 `size()` 方法获取集合中元素的数量。
+- 使用 `empty()` 方法判断集合是否为空。
+
+```cpp
+std::set<int> s = {1, 2, 3};
+
+std::cout << "Size: " << s.size() << std::endl; // 输出: Size: 3
+std::cout << "Is empty: " << s.empty() << std::endl; // 输出: Is empty: 0 (false)
+```
+
+---
+
+### 8. **清空集合**
+
+- 使用 `clear()` 方法清空集合。
+
+```cpp
+std::set<int> s = {1, 2, 3};
+s.clear(); // s = {}
+```
+
+---
+
+### 9. **获取第一个和最后一个元素**
+
+- 使用 `begin()` 获取指向第一个元素的迭代器。
+- 使用 `rbegin()` 获取指向最后一个元素的迭代器（反向迭代器）。
+
+```cpp
+std::set<int> s = {1, 2, 3, 4, 5};
+
+std::cout << "First element: " << *s.begin() << std::endl; // 输出: First element: 1
+std::cout << "Last element: " << *s.rbegin() << std::endl; // 输出: Last element: 5
+```
+
+---
+
+### 10. **范围查找**
+
+- 使用 `lower_bound()` 和 `upper_bound()` 进行范围查找。
+    - `lower_bound(k)`：返回第一个大于或等于 `k` 的元素的迭代器。
+    - `upper_bound(k)`：返回第一个大于 `k` 的元素的迭代器。
+
+```cpp
+std::set<int> s = {1, 2, 3, 4, 5};
+
+auto low = s.lower_bound(3); // 指向 3
+auto high = s.upper_bound(3); // 指向 4
+
+for (auto it = low; it != high; ++it) {
+    std::cout << *it << " "; // 输出: 3
+}
+```
+
+---
+
+### 11. **合并两个集合**
+
+- 使用 `insert()` 方法将一个集合的元素插入到另一个集合中。
+
+```cpp
+std::set<int> s1 = {1, 2, 3};
+std::set<int> s2 = {3, 4, 5};
+
+s1.insert(s2.begin(), s2.end()); // s1 = {1, 2, 3, 4, 5}
+```
+
+---
+
+### 12. **自定义排序规则**
+
+- 可以通过定义比较函数或函数对象来自定义排序规则。
+
+```cpp
+struct Compare {
+    bool operator()(int a, int b) const {
+        return a > b; // 降序排序
+    }
+};
+
+std::set<int, Compare> s = {1, 2, 3, 4, 5};
+for (int x : s) {
+    std::cout << x << " "; // 输出: 5 4 3 2 1
+}
+```
+
+---
+
+### 总结
+
+`std::set` 是一个非常有用的容器，适用于需要存储唯一元素并自动排序的场景。它的常见操作包括插入、删除、查找、遍历等，时间复杂度均为
+**O(log n)**。如果需要更高效的查找（平均 O(1)），可以考虑使用 `std::unordered_set`。
+
+如果你有其他问题，欢迎继续提问！
