--- a/代码随想录/docs/哈希.md
+++ b/代码随想录/docs/哈希.md
@@ -17,7 +17,7 @@
 在C++中，set 和 map 分别提供以下三种数据结构，其底层实现以及优劣如下表所示：
 
 | 集合                 | 底层实现 | 是否有序 | 数值是否可以重复 | 能否更改数值 | 查询效率     | 增删效率     |
-|--------------------|------|------|----------|--------|----------|----------|
+| ------------------ | ---- | ---- | -------- | ------ | -------- | -------- |
 | std::set           | 红黑树  | 有序   | 否        | 否      | O(log n) | O(log n) |
 | std::multiset      | 红黑树  | 有序   | 是        | 否      | O(logn)  | O(logn)  |
 | std::unordered_set | 哈希表  | 无序   | 否        | 否      | O(1)     | O(1)     |
@@ -26,7 +26,7 @@ std::unordered_set底层实现为哈希表，std::set 和std::multiset
 的底层实现是红黑树，红黑树是一种平衡二叉搜索树，所以key值是有序的，但key不可以修改，改动key值会导致整棵树的错乱，所以只能删除和增加。
 
 | 映射                 | 底层实现 | 是否有序  | 数值是否可以重复 | 能否更改数值  | 查询效率     | 增删效率     |
-|--------------------|------|-------|----------|---------|----------|----------|
+| ------------------ | ---- | ----- | -------- | ------- | -------- | -------- |
 | std::map           | 红黑树  | key有序 | key不可重复  | key不可修改 | O(logn)  | O(logn)  |
 | std::multimap      | 红黑树  | key有序 | key可重复   | key不可修改 | O(log n) | O(log n) |
 | std::unordered_map | 哈希表  | key无序 | key不可重复  | key不可修改 | O(1)     | O(1)     |
@@ -188,8 +188,8 @@ std::cout << "Last element: " << *s.rbegin() << std::endl; // 输出: Last eleme
 ### 10. **范围查找**
 
 - 使用 `lower_bound()` 和 `upper_bound()` 进行范围查找。
-    - `lower_bound(k)`：返回第一个大于或等于 `k` 的元素的迭代器。
-    - `upper_bound(k)`：返回第一个大于 `k` 的元素的迭代器。
+  - `lower_bound(k)`：返回第一个大于或等于 `k` 的元素的迭代器。
+  - `upper_bound(k)`：返回第一个大于 `k` 的元素的迭代器。
 
 ```cpp
 std::set<int> s = {1, 2, 3, 4, 5};
@@ -236,9 +236,258 @@ for (int x : s) {
 
 ---
 
-### 总结
+---
 
-`std::set` 是一个非常有用的容器，适用于需要存储唯一元素并自动排序的场景。它的常见操作包括插入、删除、查找、遍历等，时间复杂度均为
-**O(log n)**。如果需要更高效的查找（平均 O(1)），可以考虑使用 `std::unordered_set`。
+`std::map` 是 C++ 标准库中的一种关联容器，用于存储键值对（key-value pairs）。它的特点是：
 
-如果你有其他问题，欢迎继续提问！
+- **键（key）是唯一的**，不能重复。
+- **元素按键自动排序**（默认按升序，可以自定义排序规则）。
+- 基于红黑树实现，插入、删除和查找操作的时间复杂度均为 **O(log n)**
+
+---
+
+### 1. **初始化 `std::map`**
+
+```cpp
+#include <iostream>
+#include <map>
+
+int main() {
+    // 默认初始化（按 key 升序）
+    std::map<std::string, int> m1 = {
+        {"Alice", 25},
+        {"Bob", 30},
+        {"Charlie", 20}
+    };
+
+    // 自定义排序规则（按 key 降序）
+    std::map<std::string, int, std::greater<std::string>> m2 = {
+        {"Alice", 25},
+        {"Bob", 30},
+        {"Charlie", 20}
+    };
+
+    return 0;
+}
+```
+
+---
+
+### 2. **插入元素**
+
+- 使用 `insert()` 方法插入键值对。
+- 如果键已存在，则不会插入。
+
+```cpp
+std::map<std::string, int> m;
+m.insert({"Alice", 25});
+m.insert({"Bob", 30});
+
+// 使用下标操作符插入（如果键存在，会覆盖值）
+m["Charlie"] = 20;
+```
+
+---
+
+### 3. **访问元素**
+
+- 使用下标操作符 `[]` 访问元素。
+  - 如果键不存在，会插入一个默认值并返回。
+- 使用 `at()` 方法访问元素。
+  - 如果键不存在，会抛出 `std::out_of_range` 异常。
+
+```cpp
+std::map<std::string, int> m = {
+    {"Alice", 25},
+    {"Bob", 30}
+};
+
+// 使用 [] 访问
+std::cout << m["Alice"] << std::endl; // 输出: 25
+
+// 使用 at() 访问
+std::cout << m.at("Bob") << std::endl; // 输出: 30
+```
+
+---
+
+### 4. **删除元素**
+
+- 使用 `erase()` 方法删除元素。
+  - 可以删除指定键或指定位置的元素。
+
+```cpp
+std::map<std::string, int> m = {
+    {"Alice", 25},
+    {"Bob", 30},
+    {"Charlie", 20}
+};
+
+// 删除键为 "Bob" 的元素
+m.erase("Bob");
+
+// 删除迭代器指向的元素
+auto it = m.find("Alice");
+if (it != m.end()) {
+    m.erase(it);
+}
+```
+
+---
+
+### 5. **查找元素**
+
+- 使用 `find()` 方法查找元素。
+  - 如果找到，返回指向该键值对的迭代器；否则返回 `end()`。
+
+```cpp
+std::map<std::string, int> m = {
+    {"Alice", 25},
+    {"Bob", 30}
+};
+
+auto it = m.find("Alice");
+if (it != m.end()) {
+    std::cout << "Found: " << it->second << std::endl; // 输出: Found: 25
+} else {
+    std::cout << "Not found" << std::endl;
+}
+```
+
+---
+
+### 6. **判断键是否存在**
+
+- 使用 `count()` 方法判断键是否存在。
+  - 由于 `std::map` 的键是唯一的，`count()` 返回值只能是 0 或 1。
+
+```cpp
+std::map<std::string, int> m = {
+    {"Alice", 25},
+    {"Bob", 30}
+};
+
+if (m.count("Alice")) {
+    std::cout << "Alice exists" << std::endl;
+} else {
+    std::cout << "Alice does not exist" << std::endl;
+}
+```
+
+---
+
+### 7. **遍历 `std::map`**
+
+- 使用迭代器遍历 `std::map`。
+- 遍历时元素会按键的排序规则输出。
+
+```cpp
+std::map<std::string, int> m = {
+    {"Alice", 25},
+    {"Bob", 30},
+    {"Charlie", 20}
+};
+
+for (auto it = m.begin(); it != m.end(); ++it) {
+    std::cout << it->first << ": " << it->second << std::endl;
+}
+```
+
+---
+
+### 8. **获取 `std::map` 大小**
+
+- 使用 `size()` 方法获取键值对的数量。
+- 使用 `empty()` 方法判断 `std::map` 是否为空。
+
+```cpp
+std::map<std::string, int> m = {
+    {"Alice", 25},
+    {"Bob", 30}
+};
+
+std::cout << "Size: " << m.size() << std::endl; // 输出: Size: 2
+std::cout << "Is empty: " << m.empty() << std::endl; // 输出: Is empty: 0 (false)
+```
+
+---
+
+### 9. **清空 `std::map`**
+
+- 使用 `clear()` 方法清空 `std::map`。
+
+```cpp
+std::map<std::string, int> m = {
+    {"Alice", 25},
+    {"Bob", 30}
+};
+
+m.clear(); // m = {}
+```
+
+---
+
+### 10. **获取第一个和最后一个元素**
+
+- 使用 `begin()` 获取指向第一个元素的迭代器。
+- 使用 `rbegin()` 获取指向最后一个元素的迭代器（反向迭代器）。
+
+```cpp
+std::map<std::string, int> m = {
+    {"Alice", 25},
+    {"Bob", 30},
+    {"Charlie", 20}
+};
+
+std::cout << "First element: " << m.begin()->first << ": " << m.begin()->second << std::endl;
+std::cout << "Last element: " << m.rbegin()->first << ": " << m.rbegin()->second << std::endl;
+```
+
+---
+
+### 11. **范围查找**
+
+- 使用 `lower_bound()` 和 `upper_bound()` 进行范围查找。
+  - `lower_bound(k)`：返回第一个键大于或等于 `k` 的元素的迭代器。
+  - `upper_bound(k)`：返回第一个键大于 `k` 的元素的迭代器。
+
+```cpp
+std::map<std::string, int> m = {
+    {"Alice", 25},
+    {"Bob", 30},
+    {"Charlie", 20}
+};
+
+auto low = m.lower_bound("Bob"); // 指向 {"Bob", 30}
+auto high = m.upper_bound("Bob"); // 指向 {"Charlie", 20}
+
+for (auto it = low; it != high; ++it) {
+    std::cout << it->first << ": " << it->second << std::endl;
+}
+```
+
+---
+
+### 12. **自定义排序规则**
+
+- 可以通过定义比较函数或函数对象来自定义排序规则。
+
+```cpp
+struct Compare {
+    bool operator()(const std::string& a, const std::string& b) const {
+        return a > b; // 按 key 降序排序
+    }
+};
+
+std::map<std::string, int, Compare> m = {
+    {"Alice", 25},
+    {"Bob", 30},
+    {"Charlie", 20}
+};
+
+for (const auto& pair : m) {
+    std::cout << pair.first << ": " << pair.second << std::endl;
+}
+```
+
+---
