--- a/代码随想录/docs/字符串.md
+++ b/代码随想录/docs/字符串.md
@@ -1,4 +1,4 @@
-在C++中，`std::reverse` 是一个标准库函数，用于反转容器（如数组、向量、字符串等）中的元素顺序。它定义在 `<algorithm>` 头文件中。
+在C++中，`std::reverse`是一个标准库函数，用于反转容器（如数组、向量、字符串等）中的元素顺序。它定义在`<algorithm>`头文件中。
 
 ### 函数原型
 
@@ -12,3 +12,7 @@ void reverse( BidirIt first, BidirIt last );
 - `first`：指向要反转的第一个元素的迭代器。
 
 - `last`：指向要反转的最后一个元素的下一个位置的迭代器。
+
+### erase函数
+
+时间复杂度为o（n）
